# capstone120

./: .gitignore  2023-10-12-18-07-21.bag  README.md  frames.gv
capstone120_ws/install/: setup.sh
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/lib/pkgconfig/: beginner_tutorials.pc  realsense2_camera.pc  realsense2_description.pc
install/: .rosinstall  _setup_util.py  local_setup.sh
install/lib/pkgconfig/: realsense2_camera.pc
src/: andy_zhongyu.py
src/capstone120_move/: CMakeLists.txt  package.xml
src/capstone120_move/launch/: moveit_point.launch
src/capstone120_move/scripts/: new_terminal_to_send_topic.sh  send_topic_move.sh
src/capstone120_move/src/: controller.py  listener.py  point_point.py  talker.py
src/logging/: CMakeLists.txt  package.xml
src/logging/launch/: logging.launch
src/logging/src/: joint_positions.py
src/moving/: CMakeLists.txt  package.xml
src/moving/launch/: move_arm.launch
src/moving/scripts/: send_topic.sh
src/moving/src/: action.py  avg_target.py  blueprint_to_coordinates.py  compute_trajectory.py  get_target_pose.py  move_arm.py  test2_move_arm.py  test_client.py  test_move_arm.py  test_server.py  test_topic.py  tf2_broadcaster_listener_world_camera.py
src/moving/srv/: Test_service.srv
src/path_planning/: tf2_broadcaster_listener_world_camera.py  tf_test.py
src/quadruped/unitree_2dnav/: package.xml
src/quadruped/unitree_legged_real/: CMakeLists.txt
src/sagittarius_descriptions/urdf/: sgr532.urdf.xacro
src/vision/: CMakeLists.txt  package.xml
src/vision/src/: color_extraction.py  (+3 more)
(+32 files in other folders)
